--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Deadlines.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Deadlines.cshtml
@@ -2,19 +2,37 @@
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Deadlines";
 
+    string action = "";
+
+    Session["loginError"] = "";
     if (IsPost)
     {
-        string action = Request["action"];
+        action = Request["action"];
 
-        if (action.Equals("login") && Session["cursist"] == null)
+        switch (action)
         {
-            Session["cursist"] = Administratix.Model.Cursist.CursistSelectAllByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"]));
-        }
-        if (action.Equals("logout"))
-        {
-            Session["cursist"] = null;
-        }
+            case "login":
+                if (Session["cursist"] == null)
+                {
+                    try
+                    {
+                        
+                        Session["cursist"] = Administratix.Model.Cursist.Login(Request["Login-CursistNummer"]);
+                    }
+                    catch (Exception e)
+                    {
 
+                        Session["loginError"] = e.Message;
+                    }
+
+                }
+                break;
+
+            case "logout":
+                Session["cursist"] = null;
+                break;
+
+        }
     }
     
     string token = "";
