--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/ExamenData.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/ExamenData.cshtml
@@ -3,18 +3,35 @@
     Page.Title = "Examendata";
 
     string action = "";
-    
-    if(IsPost)
+
+    Session["loginError"] = "";
+    if (IsPost)
     {
         action = Request["action"];
 
-        if (action.Equals("login") && Session["cursist"] == null)
+        switch (action)
         {
-            Session["cursist"] = Administratix.Model.Cursist.CursistSelectAllByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"]));
-        }
-        if (action.Equals("logout"))
-        {
-            Session["cursist"] = null;
+            case "login":
+                if (Session["cursist"] == null)
+                {
+                    try
+                    {
+                        
+                        Session["cursist"] = Administratix.Model.Cursist.Login(Request["Login-CursistNummer"]);
+                    }
+                    catch (Exception e)
+                    {
+
+                        Session["loginError"] = e.Message;
+                    }
+
+                }
+                break;
+
+            case "logout":
+                Session["cursist"] = null;
+                break;
+
         }
     }
 
