--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/ExamenPunten.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/ExamenPunten.cshtml
@@ -4,20 +4,33 @@
 
     string action = "";
 
+    Session["loginError"] = "";
     if (IsPost)
     {
         action = Request["action"];
 
-        if (action != null)
+        switch (action)
         {
-            if (action.Equals("login") && Session["cursist"] == null)
-            {
-                Session["cursist"] = Administratix.Model.Cursist.CursistSelectAllByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"]));
-            }
-            if (action.Equals("logout"))
-            {
+            case "login":
+                if (Session["cursist"] == null)
+                {
+                    try
+                    {
+                        Session["cursist"] = Administratix.Model.Cursist.Login(Request["Login-CursistNummer"]);
+                    }
+                    catch (Exception e)
+                    {
+
+                        Session["loginError"] = e.Message;
+                    }
+
+                }
+                break;
+
+            case "logout":
                 Session["cursist"] = null;
-            }
+                break;
+
         }
     }
 
