--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
@@ -4,26 +4,54 @@
 
     string action = "";
 
-    Administratix.BLL.Cursist cursist = new Administratix.BLL.Cursist();
-        
     if (IsPost)
     {
         action = Request["action"];
-        if (action != null)
+
+        switch (action)
         {
-            if (action.Equals("login"))
-            {
+            case "login":
+                if (Session["cursist"] == null)
+                {
+                    try
+                    {
+                        Session["loginError"] = "";
+                        Session["cursist"] = Administratix.Model.Cursist.Login(Request["Login-CursistNummer"]);
+                    }
+                    catch (Exception e)
+                    {
 
-                Session["cursist"] = Administratix.Model.Cursist.CursistSelectAllByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"])); ;
-            
-            }
-            if (action.Equals("logout"))
-            {
+                        Session["loginError"] = e.Message;
+                    }
+
+                }
+                break;
+
+            case "logout":
                 Session["cursist"] = null;
-            }
-        }
+                break;
 
+        }
     }
+    
+    //if (IsPost)
+    //{
+    //    action = Request["action"];
+    //    if (action != null)
+    //    {
+    //        if (action.Equals("login"))
+    //        {
+
+    //            Session["cursist"] = Administratix.Model.Cursist.CursistSelectAllByCursistNummer(Convert.ToInt32(Request["Login-CursistNummer"])); ;
+            
+    //        }
+    //        if (action.Equals("logout"))
+    //        {
+    //            Session["cursist"] = null;
+    //        }
+    //    }
+
+    //}
 
 
 }
@@ -41,7 +69,7 @@
         @if (Session["cursist"] != null)
         {
             <form id="login" action="" method="post" class="loginForm">
-                @{cursist = (Administratix.BLL.Cursist)Session["cursist"];}
+                @{Administratix.BLL.Cursist cursist = (Administratix.BLL.Cursist)Session["cursist"];}
                 <label>Ingelogd als @cursist.Voornaam @cursist.Familienaam (@cursist.CursistNummer)</label>
 
                 <button type="submit" name="action" value="logout">Log uit</button>
@@ -51,7 +79,8 @@
         else
         {
             <form id="login" action="" method="post" class="loginForm">
-                <input type="number" required name="Login-CursistNummer" id="Login-CursistNummer" />  <button type="submit" name="action" value="login">Inloggen</button>
+                @Session["loginError"]
+                <input type="text" required name="Login-CursistNummer" id="Login-CursistNummer" />  <button type="submit" name="action" value="login">Inloggen</button>
             </form>
         }
 
